--- a/Main/SEToolbox/SEToolbox/Views/ControlPosition.xaml
+++ b/Main/SEToolbox/SEToolbox/Views/ControlPosition.xaml
@@ -3,6 +3,9 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:lex="http://wpflocalizeextension.codeplex.com"
+             lex:ResxLocalizationProvider.DefaultAssembly="SEToolbox"
+             lex:ResxLocalizationProvider.DefaultDictionary="Resources"
              mc:Ignorable="d" 
              d:DesignHeight="20" d:DesignWidth="300">
     <Grid>
@@ -12,28 +15,28 @@
             <ColumnDefinition/>
         </Grid.ColumnDefinitions>
         <Grid Grid.Column="0">
-            <TextBox ToolTip="Position coordinate X" AutomationProperties.AutomationId="PositionX" VerticalAlignment="Center" VerticalContentAlignment="Center">
+            <TextBox ToolTip="{lex:Loc CtlPositionXTooltip}" AutomationProperties.AutomationId="PositionX" VerticalAlignment="Center" VerticalContentAlignment="Center">
                 <TextBox.Text>
                     <Binding Path="PositionX" Mode="TwoWay" UpdateSourceTrigger="PropertyChanged"/>
                 </TextBox.Text>
             </TextBox>
-            <TextBlock Text="X" Background="Transparent" Foreground="LightSteelBlue" HorizontalAlignment="Right" VerticalAlignment="Center" Margin="4,0" IsHitTestVisible="False" />
+            <TextBlock Text="{lex:Loc CtlPositionXLabel}" Background="Transparent" Foreground="LightSteelBlue" HorizontalAlignment="Right" VerticalAlignment="Center" Margin="4,0" IsHitTestVisible="False" />
         </Grid>
         <Grid Grid.Column="1">
-            <TextBox ToolTip="Position coordinate Y" AutomationProperties.AutomationId="PositionY" VerticalAlignment="Center" VerticalContentAlignment="Center">
+            <TextBox ToolTip="{lex:Loc CtlPositionYTooltip}" AutomationProperties.AutomationId="PositionY" VerticalAlignment="Center" VerticalContentAlignment="Center">
                 <TextBox.Text>
                     <Binding Path="PositionY" Mode="TwoWay" UpdateSourceTrigger="PropertyChanged"/>
                 </TextBox.Text>
             </TextBox>
-            <TextBlock Text="Y" Background="Transparent" Foreground="LightSteelBlue" HorizontalAlignment="Right" VerticalAlignment="Center" Margin="4,0" IsHitTestVisible="False" />
+            <TextBlock Text="{lex:Loc CtlPositionYLabel}" Background="Transparent" Foreground="LightSteelBlue" HorizontalAlignment="Right" VerticalAlignment="Center" Margin="4,0" IsHitTestVisible="False" />
         </Grid>
         <Grid Grid.Column="2">
-            <TextBox ToolTip="Position coordinate Z" AutomationProperties.AutomationId="PositionZ" VerticalAlignment="Center" VerticalContentAlignment="Center">
+            <TextBox ToolTip="{lex:Loc CtlPositionZTooltip}" AutomationProperties.AutomationId="PositionZ" VerticalAlignment="Center" VerticalContentAlignment="Center">
                 <TextBox.Text>
                     <Binding Path="PositionZ" Mode="TwoWay" UpdateSourceTrigger="PropertyChanged"/>
                 </TextBox.Text>
             </TextBox>
-            <TextBlock Text="Z" Background="Transparent" Foreground="LightSteelBlue" HorizontalAlignment="Right" VerticalAlignment="Center" Margin="4,0" IsHitTestVisible="False" />
+            <TextBlock Text="{lex:Loc CtlPositionZLabel}" Background="Transparent" Foreground="LightSteelBlue" HorizontalAlignment="Right" VerticalAlignment="Center" Margin="4,0" IsHitTestVisible="False" />
         </Grid>
     </Grid>
 </UserControl>
