--- a/Main/SEToolbox/SEToolbox/Views/ControlUnknown.xaml
+++ b/Main/SEToolbox/SEToolbox/Views/ControlUnknown.xaml
@@ -4,6 +4,9 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:views="clr-namespace:SEToolbox.Views"
+             xmlns:lex="http://wpflocalizeextension.codeplex.com"
+             lex:ResxLocalizationProvider.DefaultAssembly="SEToolbox"
+             lex:ResxLocalizationProvider.DefaultDictionary="Resources"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
     <Grid>
@@ -17,10 +20,10 @@
             <RowDefinition/>
         </Grid.RowDefinitions>
         <StackPanel Orientation="Horizontal" Grid.ColumnSpan="2">
-            <Label>Unknown -</Label>
+            <Label Content="{lex:Loc CtlUnknownTitle}"/>
             <TextBlock VerticalAlignment="Center" Text="{Binding DisplayName}" />
         </StackPanel>
-        <Label Grid.Row="1" Grid.Column="0" Content="Position:"/>
+        <Label Grid.Row="1" Grid.Column="0" Content="{lex:Loc CtlUnknownPosition}"/>
         <views:ControlPosition Grid.Row="1" Grid.Column="1"/>
     </Grid>
 </UserControl>
