--- a/Main/SEToolbox/SEToolbox/Views/WindowFrameworkBuild.xaml
+++ b/Main/SEToolbox/SEToolbox/Views/WindowFrameworkBuild.xaml
@@ -3,8 +3,11 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:commands="clr-namespace:SEToolbox.Services"
         xmlns:converters="clr-namespace:SEToolbox.Converters"
+        xmlns:lex="http://wpflocalizeextension.codeplex.com"
+        lex:ResxLocalizationProvider.DefaultAssembly="SEToolbox"
+        lex:ResxLocalizationProvider.DefaultDictionary="Resources"
         ResizeMode="NoResize" ShowInTaskbar="False" WindowStartupLocation="CenterOwner" WindowStyle="ThreeDBorderWindow"
-        Title="Framework Build Percent" Height="160" Width="360" Icon="/SEToolbox;component/app.ico" Style="{StaticResource DefaultWindowStyle}"
+        Title="{lex:Loc WnFrameworkBuildTitle}" Height="160" Width="360" Icon="/SEToolbox;component/app.ico" Style="{StaticResource DefaultWindowStyle}"
         commands:DialogService.IsRegisteredView="True"
         commands:DialogCloser.DialogResult="{Binding CloseResult}"
         FocusManager.FocusedElement="{Binding ElementName=uxInitialElement}">
@@ -24,7 +27,7 @@
                 <ColumnDefinition Width="Auto"/>
                 <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
-            <Label Content="Build Percent:" />
+            <Label Content="{lex:Loc WnFrameworkBuildLabelPercentComplete}" />
             <TextBox Grid.Row="0" Grid.Column="1" Width="80" Style="{StaticResource textBoxInError}" Name="uxInitialElement">
                 <TextBox.Text>
                     <Binding Path="BuildPercent" Mode="TwoWay" UpdateSourceTrigger="PropertyChanged" >
@@ -37,8 +40,8 @@
             <Slider Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="2" Value="{Binding BuildPercent}" Minimum="0.5" Maximum="100" SmallChange="0.5" LargeChange="5" Margin="0,4,0,0" />
         </Grid>
         <StackPanel Grid.Row="1"  Orientation="Horizontal" Height="28" HorizontalAlignment="Right" VerticalAlignment="Bottom" Margin="8">
-            <Button Width="90" Command="{Binding OkayCommand}" Content="OK" IsDefault="True"/>
-            <Button Margin="8,0,0,0" Width="90" Command="{Binding CancelCommand}" Content="Cancel" IsCancel="True"/>
+            <Button Width="90" Command="{Binding OkayCommand}" Content="{lex:Loc WnFrameworkBuildBtnOkay}" IsDefault="True"/>
+            <Button Margin="8,0,0,0" Width="90" Command="{Binding CancelCommand}" Content="{lex:Loc WnFrameworkBuildBtnCancel}" IsCancel="True"/>
         </StackPanel>
     </Grid>
 </Window>
